Attemp to fix blurred vid thumbnails

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ nav button:hover{background:#c08c4d;color:#000000}
 main{padding:40px 20px}
 .content-section{display:none;max-width:700px;margin:auto}
 .content-section.visible{display:block}
+.vid-grid{all: revert}
 .gallery-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:15px;margin:20px 0}
 .gallery-grid img{width:100%;border-radius:8px;border:3px solid #c08c4d;transition:transform .3s}
 .gallery-grid img:hover{transform:scale(1.05)}
@@ -70,7 +71,7 @@ table.center {
   margin-left: auto;
   margin-right: auto;
   border: 1px solid black;
-  width: 50%; /* Set a width less than 100% */
+  width: 70%; /* Set a width less than 100% */
   }
   td, th {
   text-align: left;
